@@ -1,3 +1,15 @@
+2011-10-31  Dave Michael  <dmichael@chromium.org>
+
+        V8MessageEvent::dataAccessorGetter does not return a reference to its caller
+        https://bugs.webkit.org/show_bug.cgi?id=71229
+
+        Reviewed by Adam Barth.
+
+        Test: fast/events/dispatch-message-string-data.html
+
+        * bindings/v8/custom/V8MessageEventCustom.cpp:
+        (WebCore::V8MessageEvent::dataAccessorGetter):
+
 2011-10-31  Renata Hodovan  <reni@webkit.org>
 
         [Qt] Build fix after r98853.
